kermeta_projects/fr.irisa.triskell.kermeta.tests/test/io/constraintchecker_tests/valid/003_associations.kmt
/* $Id: 003_associations.kmt,v 1.3 2008-04-08 09:37:53 dvojtise Exp $ */

// Test of a valid associations

package root_package;

require kermeta

/* -------------------------------*/
class A {
    attribute b : B[0..1]#owner
    reference owner : B[0..1]#a
}
class B {
    attribute a : A[0..1]#owner
    reference owner : A[0..1]#b
}
/* -------------------------------*/
class C {
    attribute d : D[*]#owner
    reference owner : D[0..1]#c
}
class D {
    attribute c : C[*]#owner
    reference owner : C[0..1]#d
}
/* -------------------------------*/
class E {
    attribute r1 : F#r2
    reference r2 : F#r1
}
class F {
    attribute r1 : E#r2
    reference r2 : E#r1
}

/* -------------------------------*/
class G {
    attribute r1 : H#r2
    reference r2 : H[1]#r1
}
class H {
    attribute r1 : G#r2
    reference r2 : G[1]#r1
}


/* -------------------------------*/
class I {
    reference r1 : J[1]#r2
    reference r2 : J[*]#r1
    
    reference r3 : J#r3
    reference r4 : J[0..1]#r4
}
class J {
    reference r1 : I[1]#r2
    reference r2 : I[*]#r1
    
    reference r3 : I#r3
    reference r4 : I[0..1]#r4
}



/* -------------------------------*/
class K {
    attribute r1 : L
    attribute r2 : L[1]
    attribute r3 : L[0..1]
    attribute r4 : L[*]
    
    reference r5 : L
    reference r6 : L[1]
    reference r7 : L[0..1]
    reference r8 : L[*]
}
class L {}

/* ------------------------------- */
// this sample is valid because there is only one composition
class M {
    reference n : N[1]#m
    reference o : O[1]#m
}
class N {
	attribute m : M#n
	
}

class O {
	reference m : M#o
}
